blockframesAdmin can export all offers

--- a/apps/crm/crm/src/app/crm/pages/offers/list/offer-list.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/offers/list/offer-list.component.scss
@@ -1,3 +1,13 @@
 :host {
+  padding-top: 24px;
+  display: block;
+}
+
+mat-spinner {
+  margin: auto;
+}
+
+button {
+  margin: auto;
   display: block;
 }
