--- a/apps/crm/crm/src/app/crm/pages/offers/list/offer-list.component.html
+++ b/apps/crm/crm/src/app/crm/pages/offers/list/offer-list.component.html
@@ -1,1 +1,11 @@
-<offer-list [offers]="offers$ | async"></offer-list>
+<ng-container *ngIf="offers$ | async as offers; else loading">
+  <button [disabled]="exporting" mat-flat-button color="primary" (click)="exportTable(offers)">
+    <span>Export to CSV</span>
+    <mat-icon svgIcon="arrow_upward"></mat-icon>
+  </button>
+  <offer-list [offers]="offers"></offer-list>
+</ng-container>
+
+<ng-template #loading>
+  <mat-spinner></mat-spinner>
+</ng-template>
