--- a/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
+++ b/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
@@ -15,8 +15,7 @@
                   <mat-label>Country</mat-label>
                 </static-select>
 
-                <static-select test-id="release-media" [control]="releaseForm.get('media')" scope="releaseMedias" fxFlex
-                  [withoutValues]="['payPerView', 'est', 'nVod','aVod', 'fVod', 'sVod', 'tVod', 'inflight', 'boats', 'educational', 'rental','through', 'hotels']">
+                <static-select test-id="release-media" [control]="releaseForm.get('media')" scope="releaseMedias" fxFlex>
                   <mat-label>Release Media</mat-label>
                 </static-select>
               </div>
