--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -18,6 +18,13 @@
         <span>Archived </span>
         <span *ngIf="(titleCount$ | async) as titleCount">({{ titleCount.archived }})</span>
       </button>
+      <ng-container *ngIf="result$ | async as result">
+        <span fxFlex></span>
+        <button [disabled]="!result.length || exporting || ((filter$ | async) !== ('' || null) && (filter$ | async) !== 'accepted')" matTooltip="Links in the export will redirect to the marketplace" mat-button (click)="export(result)">
+          <mat-icon svgIcon="pdf"></mat-icon>
+          <span>Export results</span>
+        </button>
+      </ng-container>
     </header>
 
     <bf-table [source]="result$ | async" pagination="50" useFilter>
