--- a/libs/event/src/lib/form/screening/screening.component.html
+++ b/libs/event/src/lib/form/screening/screening.component.html
@@ -13,7 +13,7 @@
     <!-- Title -->
     <mat-form-field appearance="outline" id="titleField">
       <mat-label>Select the Title to display</mat-label>
-      <mat-select formControlName="titleId" (selectionChange)="checkTitleAndScreener($event.value)" test-id="title">
+      <mat-select formControlName="titleId" (selectionChange)="checkTitleAndScreener($event.value)" test-id="screening-title">
         <mat-option *ngFor="let title of titles; let i = index" [value]="title.id" [attr.test-id]="'title_' + i">
           {{ title.title.international }}
         </mat-option>
