fixed a duplicatred test-id, and created a folder for 'My titles' related tests

--- a/libs/ui/src/lib/tunnel/layout/layout.component.html
+++ b/libs/ui/src/lib/tunnel/layout/layout.component.html
@@ -5,7 +5,7 @@
     </button>
   </ng-container>
   <ng-content select="header, [tunnel-header]"></ng-content>
-  <a mat-icon-button (click)="redirect()" test-id="close">
+  <a mat-icon-button (click)="redirect()" test-id="close-tunnel">
     <mat-icon svgIcon="close"></mat-icon>
   </a>
 </mat-toolbar>
