fix PR comments

--- a/libs/event/src/lib/form/screening/screening.component.html
+++ b/libs/event/src/lib/form/screening/screening.component.html
@@ -19,7 +19,8 @@
         </mat-option>
       </mat-select>
       <mat-hint id="missing-screener" *ngIf="screenerMissing || titleMissing" test-id="missing-screener">
-        {{titleMissing ? 'No Title selected' : 'This Title has no Screener attached.'}}</mat-hint>
+        {{titleMissing ? 'No Title selected' : 'This Title has no Screener attached.'}}
+      </mat-hint>
       </mat-form-field>
 
     <!-- Description -->
