--- a/libs/event/src/lib/components/week/week.component.html
+++ b/libs/event/src/lib/components/week/week.component.html
@@ -51,7 +51,7 @@
 </ng-template>
 
 <section *ngIf="loading" class="overlay">
-  <mat-spinner></mat-spinner>
+  <logo-spinner></logo-spinner>
 </section>
 
 <!-- Tooltip (Not used yet)
