--- a/apps/festival/festival/src/app/event/session/session.component.html
+++ b/apps/festival/festival/src/app/event/session/session.component.html
@@ -110,7 +110,7 @@
 
 <ng-template #loading>
   <section class="loading-spinner" fxLayoutAlign="center center">
-    <mat-spinner></mat-spinner>
+    <logo-spinner></logo-spinner>
   </section>
 </ng-template>
 
