--- a/libs/ui/src/lib/list/page/list-page.component.html
+++ b/libs/ui/src/lib/list/page/list-page.component.html
@@ -74,7 +74,7 @@
   <!-- LOADING -->
   <ng-template #loading>
     <div fxLayout fxLayoutAlign="center">
-      <mat-spinner color="primary"></mat-spinner>
+      <logo-spinner></logo-spinner>
     </div>
   </ng-template>
 
