--- a/libs/analytics/src/lib/components/map/map.component.html
+++ b/libs/analytics/src/lib/components/map/map.component.html
@@ -77,5 +77,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <mat-spinner color="primary"></mat-spinner>
+  <article>
+    <logo-spinner></logo-spinner>
+  </article>
 </ng-template>
