--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -74,6 +74,6 @@
 
 <ng-template #loading>
   <section fxLAyout fxLayoutAlign="center center">
-    <mat-spinner></mat-spinner>
+    <logo-spinner></logo-spinner>
   </section>
 </ng-template>
