--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -54,7 +54,7 @@
     </ng-template>
     <ng-template #loading>
       <article class="loading-spinner">
-        <mat-spinner></mat-spinner>
+        <logo-spinner></logo-spinner>
       </article>
     </ng-template>
   </ng-container>
