--- a/apps/festival/festival/src/app/event/lobby/lobby.component.html
+++ b/apps/festival/festival/src/app/event/lobby/lobby.component.html
@@ -90,6 +90,6 @@
 
 <ng-template #loading>
   <section fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner></mat-spinner>
+    <logo-spinner></logo-spinner>
   </section>
 </ng-template>
