--- a/apps/festival/festival/src/app/marketplace/organization/screening/screening.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/screening/screening.component.html
@@ -21,6 +21,6 @@
 
 <ng-template #loading>
   <article test-id="screening-spinner" fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner></mat-spinner>
+    <logo-spinner></logo-spinner>
   </article>
 </ng-template>
