--- a/libs/analytics/src/lib/components/bar-chart/bar-chart.component.html
+++ b/libs/analytics/src/lib/components/bar-chart/bar-chart.component.html
@@ -25,5 +25,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <mat-spinner color="primary"></mat-spinner>
+  <article>
+    <logo-spinner></logo-spinner>
+  </article>
 </ng-template>
