--- a/libs/analytics/src/lib/components/line-chart/line-chart.component.html
+++ b/libs/analytics/src/lib/components/line-chart/line-chart.component.html
@@ -31,5 +31,7 @@
 </ng-template>
 
 <ng-template #loading>
-  <mat-spinner color="primary"></mat-spinner>
+  <article>
+    <logo-spinner></logo-spinner>
+  </article>
 </ng-template>
