--- a/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/select-title/select-title.component.html
@@ -26,7 +26,7 @@
 
 <ng-template #loading>
   <section>
-    <mat-spinner></mat-spinner>
+    <logo-spinner></logo-spinner>
   </section>
 </ng-template>
 
