--- a/apps/catalog/catalog/src/app/dashboard/sales/shell/view/view.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/sales/shell/view/view.component.html
@@ -63,5 +63,7 @@
 </ng-container>
 
 <ng-template #loading>
-  <mat-spinner></mat-spinner>
+  <article class="spinner">
+    <logo-spinner></logo-spinner>
+  </article>
 </ng-template>
