--- a/libs/contract/src/lib/term/components/form/form.component.html
+++ b/libs/contract/src/lib/term/components/form/form.component.html
@@ -44,6 +44,6 @@
 
 <ng-template #loading>
   <section>
-    <mat-spinner></mat-spinner>
+    <logo-spinner></logo-spinner>
   </section>
 </ng-template>
