--- a/apps/catalog/catalog/src/app/dashboard/avails/calendar/calendar.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/calendar/calendar.component.html
@@ -1,6 +1,5 @@
 <form [availsFilter]="availsForm"></form>
 
-
 <section class="surface" fxLayout="column">
   <!-- CALENDAR LEGEND -->
   <ul>
@@ -40,9 +39,10 @@
     ></avails-calendar>
   </ng-container>
   <ng-template #loading>
-    <mat-spinner></mat-spinner>
+    <article class="spinner">
+      <logo-spinner></logo-spinner>
+    </article>
   </ng-template>
-
 
   <div *ngIf="(status$ | async) === 'INVALID'" fxLayoutAlign="center center">
     <article class="mat-body-2">
