--- a/apps/catalog/catalog/src/app/dashboard/avails/map/map.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/map/map.component.html
@@ -66,7 +66,9 @@
   </world-map>
 </ng-container>
 <ng-template #loading>
-  <mat-spinner></mat-spinner>
+  <article class="spinner">
+    <logo-spinner></logo-spinner>
+  </article>
 </ng-template>
 
 <button mat-flat-button color="primary" fxFlexAlign="center" (click)="downloadCsv()"
