--- a/apps/catalog/catalog/src/app/dashboard/sales/shell/external/external.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/sales/shell/external/external.component.html
@@ -23,5 +23,7 @@
 </ng-container>
 
 <ng-template #loading>
-  <mat-spinner></mat-spinner>
+  <article>
+    <logo-spinner></logo-spinner>
+  </article>
 </ng-template>
