--- a/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/calendar/avails-calendar.component.html
@@ -50,7 +50,9 @@
       </avails-calendar>
     </ng-container>
     <ng-template #loading>
-      <mat-spinner></mat-spinner>
+      <article class="spinner">
+        <logo-spinner></logo-spinner>
+      </article>
     </ng-template>
     <div *ngIf="(status$ | async) === 'INVALID' && mandates.length" class="overlay" fxLayoutAlign="center center">
       <article class="mat-body-2">
