--- a/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/map/avails-map.component.html
@@ -92,7 +92,9 @@
     </world-map>
   </ng-container>
   <ng-template #loading>
-    <mat-spinner></mat-spinner>
+    <article class="spinner">
+      <logo-spinner></logo-spinner>
+    </article>
   </ng-template>
 
   <article fxLayout fxLayoutAlign="end" *ngIf="!availsForm.invalid">
