--- a/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
@@ -29,7 +29,7 @@
       [members]="members"
       [isSuperAdmin]="true"
       [showFilter]="true"
-      showActions
+      showCrmActions
       (memberRemoved)="removeMember($event)"
       (updatedToSuperAdmin)="updateRole($event, 'superAdmin')"
       (updatedToAdmin)="updateRole($event, 'admin')"
