--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -63,7 +63,7 @@
       <filter-release-year fxLayout="column" [form]="searchForm.minReleaseYear"></filter-release-year>
     </ng-template>
 
-    <ng-template filter label="Festival Name" [form]="searchForm.festivals">
+    <ng-template filter label="Festival Selection" [form]="searchForm.festivals">
       <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.festivals"
         scope="festival">
       </static-check-boxes>
