--- a/libs/organization/src/lib/organization/components/member-repertory/member-repertory.component.html
+++ b/libs/organization/src/lib/organization/components/member-repertory/member-repertory.component.html
@@ -19,13 +19,13 @@
     <ng-template colRef="role" label="Permissions" let-role sort>
       {{ displayRole(role) }}
     </ng-template>
-    <ng-template *ngIf="isSuperAdmin" colRef="uid" let-uid>
+    <ng-template *ngIf="isSuperAdmin" colRef="uid" let-uid label="Actions">
       <member-permissions [uid]="uid" (memberRemoved)="memberRemoved.emit(uid)"
         (updatedToSuperAdmin)="updatedToSuperAdmin.emit(uid)" (updatedToAdmin)="updatedToAdmin.emit(uid)"
         (updatedToMember)="updatedToMember.emit(uid)">
       </member-permissions>
     </ng-template>
-    <ng-template *ngIf="showActions" colRef="uid" label="Actions" let-uid let-user="item">
+    <ng-template *ngIf="showCrmActions" colRef="uid" label="Advanced" let-uid let-user="item">
       <a mat-icon-button [routerLink]="user.edit?.link">
         <mat-icon svgIcon="edit"></mat-icon>
       </a>
