--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -24,7 +24,10 @@
 
 <section>
   <article>
-    <h3>Interested Users</h3>
+    <h3>
+      <span>Interested Users</span>
+      <mat-icon svgIcon="info" matTooltip="This data only includes Buyers and excludes all Sellers from Archipel Market."></mat-icon>
+    </h3>
     <p class="mat-body-1">See how many users interacted with your movie (viewed your title, added to wishlist, requested
       a screening, etc).</p>
   </article>
@@ -88,7 +91,10 @@
   </bf-table>
 
   <article>
-    <h3>Title Performance</h3>
+    <h3>
+      <span>Title Performance</span>
+      <mat-icon svgIcon="info" matTooltip="This data only includes Buyers and excludes all Sellers from Archipel Market."></mat-icon>
+    </h3>
     <p class="mat-body-1">Check the overall metrics of your title performance.</p>
   </article>
 
