--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.scss
@@ -42,6 +42,11 @@ section {
     flex-wrap: wrap;
     margin-bottom: 8px;
 
+    h3 {
+      display: flex;
+      align-items: center;
+    }
+
     h4 {
       margin-bottom: 4px;
     }
