--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.scss
@@ -29,6 +29,12 @@ section {
     display: flex;
     gap: 24px;
 
+    analytics-pie-chart h5 {
+      margin-bottom: 0;
+      display: flex;
+      align-items: center;
+    }
+
     analytics-pie-chart,
     analytics-metric-card-list {
       flex: 1;
